https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.7.1
--------------------------------------------------------
Hyprland:
- Add optional network-manager applet support. Can be activated in Settings script System/nm-applet
- Show/Hide network module in Settings script
- New Settings for keyboard (incl. natural_scroll for touchpads)
- Add ChatGPT Icon to Waybar. Can be disabled in settings

Version 2.7
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.7
--------------------------------------------------------
Installation:
- Display Manager SDDM and sugar-candy theme will be installed. 
- Optional display manager disablement possible
- Select between hyprland or hyprland-git
- Arco Linux is now supported. Please choose hyprland-git and reinstall/force the installation of all packages during the installation/update script.

General:
- Adding icons to eza. Adding ls, ll, lt
- New alacritty.toml configuration file

Hyprland:
- New Waybar Module Idle Inhibitor to deactivate the automatic start of swaylock e.g. to watch videos or for online meetings 
- Create own customization of ML4W waybar themes: https://gitlab.com/stephan-raabe/dotfiles/-/tree/main/waybar?ref_type=heads#define-your-own-config-and-stylecss-for-a-ml4w-theme
- Wallpaper selector now with preview thumbnails
- Settings script reworked completely. Implementation of custom modules are now possible. 
- Waybar settings module to edit some ML4W waybar themes settings on the fly
- Waybar with Systray (can be hidden in settings script)
- SDDM settings module to update the SDDM background with current wallpaper
- All image formats are now supported for setting a wallpaper (jpg,jpeg,png,...)

Qtile:
- Removed wayland support due to many limitations. Installation script will rename /usr/share/wayland-sessions/qtile-wayland.session to qtile-wayland.bak to hide in sddm


Version 2.6.1
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.6.1
--------------------------------------------------------