@@ -1,7 +1,7 @@
 #!/bin/bash
 _getHeader "$name" "$author"
+echo "ML4W dotfiles Version" $(cat $HOME/dotfiles/.version/name)
+echo
 echo "$homepage ($email)"
-echo "ML4W dotfiles Version 2.7"
-echo "Settings Version" $(_getVersion)
-echo ""
+echo
 echo $description
