@@ -1,3 +1,0 @@
-# Setup global keyboard layout here
-
-keyboard_layout = "us"
